--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -21,11 +21,11 @@
         More action and less talk. We produce important software technology that impacts the society.
     </article>
 
-    <div json="true" iterate="projects" datasource="../../../assets/json/projects.json" class="box cards gut3- br05- bcwhite- border- tac">
+    <div json="true" iterate="projects" datasource="../../../assets/json/projects.json" class="box cards list gut3- br05- border- tac">
         <figure class="p1">
             <h5 jsonget="title"></h5>
             <h7 jsonget="summary"></h7>
-            <a jsonget="link" target="_blank" href="#"><i class="icon">🔗</i>Go to project</a>
+            <div><a class="button bcred fr" jsonget="link" target="_blank" href="#"><i class="icon">🔗</i>Go to project</a></div>
         </figure>
     </div>
 
