--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -15,15 +15,15 @@
     </nav>
 
     <article class="mt2">
-        <p>When Theologian Jean Baptist Chabot released the first edition of his interpretation of The Chronicles of Michael Rabo, he failed to add a comma and the word "Oromoye" to the sentence.</p>
+        <p>When Theologian Jean Baptist Chabot released the first edition of his interpretation of The Chronicles of Michael Rabo, he failed to add a comma and left of "Oromoye", meaning "Arameans" in the sentence.</p>
         <br>
-        <p>The error result went viral online for years and confused many Arameans when it claimed "Othuroye D-henun Suryoye", meaning "Assyrians are Syriacs".</p>
+        <p>The error result went viral online for years and confused many Arameans when the body text translated into "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs".</p>
         <br>
-        <p>In the first edition, it is clear that it says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", in the subheading but nothing about "Oromoye" in the body text. When reading further on page 11, it reads: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye D-henun Suryoye, Ebroye, Forsoye"</p>
+        <p>In the first edition, it is clear that the heading says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", meaning "Semitic people descendants of Shem", but no mentioning about the "Arameans" in the subheading, however reading further on page 11, it says: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye d-henun Suryoye, Ebroye, Forsoye", meaning "Children of Shem: Assyrians, Chaldeans, Lydians, Arameans that is Syriacs, Hebrews, and Persians."</p>
         <br>
-        <p>The error was corrected in 2006 in a new edition which was published with the correct interpretation, thanks to Dayroyo Isa Aygur, Mushe Görgun, Steffanos Budak, Iskender Demirel, Eliyo Seven beth Qemez and Gabriel Yalgin.</p>
+        <p>The error was corrected in 2006 in a new edition which was published with the correct interpretation, thanks to Dayroyo Isa Aygur, Mushe Görgun, Steffanos Budak, Iskender Demirel, Eliyo Seven beth Qemez, and Gabriel Yalgin.</p>
         <hr class="mt2 bcblack">
-        <small class="gray">Published: 2021-01-12, Last update: 2021-01-12</small>
+        <small class="gray">Published: 2021-01-12, Last update: 2021-03-08</small>
     </article>
 
 </section>
