--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -15,7 +15,7 @@
     </nav>
 
     <article class="mt2">
-        <p>When Theologian Jean Baptist Chabot released the first edition of his interpretation of The Chronicles of Michael Rabo, he failed to add a comma and left of "Oromoye", meaning "Arameans" in the sentence.</p>
+        <p>When Theologian Jean Baptist Chabot released the first edition of his interpretation of The Chronicles of Michael Rabo, he failed to add a comma and left out "Oromoye", meaning "Arameans" in the sentence.</p>
         <br>
         <p>The error result went viral online for years and confused many Arameans when the body text translated into "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs".</p>
         <br>
