--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -6,16 +6,16 @@
 </template>
 
 <section class="pauto">
-    <h1>Misstakes made in The Chronicles of Michael Rabo interpretation</h1>
+    <h1>Misstakes made in The Chronicle of Michael the Great interpretation</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#" globalize="article">Article</a></li>
-            <li>Misstakes made in The Chronicles of Michael Rabo interpretation</li>
+            <li>Interpretation mistakes made in The Chronicle of Michael the Great</li>
         </ol>
     </nav>
 
     <article class="mt2">
-        <p>When Theologian Jean Baptist Chabot released the first edition of his interpretation of The Chronicles of Michael Rabo, he failed to add a comma and left out "Oromoye", meaning "Arameans" in the sentence.</p>
+        <p>When Theologian Jean Baptist Chabot released the first edition of his interpretation of The Chronicle of Michael the Great, he failed to add a comma and left out "Oromoye", meaning "Arameans" in the sentence.</p>
         <br>
         <p>The error result went viral online for years and confused many Arameans when the body text translated into "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs".</p>
         <br>
