--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -6,11 +6,11 @@
 </template>
 
 <section class="pauto">
-    <h1>Misstakes made in The Chronicle of Michael the Great interpretation</h1>
+    <h1>Interpretation mistakes made in The Chronicle of Michael the Great</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#" globalize="article">Article</a></li>
-            <li>Interpretation mistakes made in The Chronicle of Michael the Great</li>
+            <li>Interpretation mistakes was made in The Chronicle of Michael the Great.</li>
         </ol>
     </nav>
 
