--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 </section>
 
 <section class="light">
-    <article class="pauto xs_p0 sm_pauto1r xm_pauto1r md_pauto1r wm70">
+    <article class="pauto xs_p0 sm_p0 xm_p0 md_1r lg_p1r xl_p1r xxl_p1r wm70">
         <div class="box cards m1- p1- br05- bcwhite- border- bo0- tac md_gtc2 xl_gtc3 xxl_gtc3 xxxl_gtc4" json="true" iterate="articles" datasource="assets/json/articles.json">
             <figure class="shade0 p1">
                 <a href="#" jsonget="link">
