--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <input type="radio" name="slider" id="slide{{ jsonget:id }}" if="{{ jsonget:id }};1;checked">
         <label for="slide{{ jsonget:id }}" class="footer icon24 pb1">&#9679;</label>
         <section>
-            <article class="white w70">
+            <article class="white w70 xm_w80p">
                 <h1 class="fs17" jsonget="title"></h1>
                 <h3 class="beige tshade1" jsonget="summary"></h3>
                 <a href="#" jsonget="link" class="button p1 bcblack white mt2 br05 xm_w100p" globalize="read_more">Read more</a>
