--- a/contact/index.html
+++ b/contact/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="gap1-">
-                    <button class="fr outlined" type="reset" globalize="reset">Reset</button>
+                    <button class="outlined" type="reset" globalize="reset">Reset</button>
                     <button type="submit" globalize="send_message">Send message</button>
                 </div>
         
