--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -16,7 +16,7 @@
                 <details>
                     <summary globalize="language">Language</summary>
                     <a href="./research/ethnology/linguistics/old_aramaic.html" globalize="old_aramaic">Old Aramaic</a>
-                    <a href="#" globalize="official_aramaic">Official Aramaic</a>
+                    <a href="./research/ethnology/linguistics/official_aramaic.html" globalize="official_aramaic">Official Aramaic</a>
                     <a href="#" globalize="middle_aramaic">Middle Aramaic</a>
                     <a href="#" globalize="late_aramaic">Late Aramaic</a>
                     <a href="#" globalize="modern_aramaic">Modern Aramaic</a>
