--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -21,8 +21,8 @@
         More action and less talk. We produce important software technology that impacts the society.
     </article>
 
-    <div json="true" iterate="projects" datasource="../../../assets/json/projects.json" class="box cards list gut3- br05- border- tac">
-        <figure class="p1">
+    <div json="true" iterate="projects" datasource="../../../assets/json/projects.json" class="box cards list gut3- br05- border- tac p2-">
+        <figure>
             <h5 jsonget="title"></h5>
             <h7 jsonget="summary"></h7>
             <div><a class="button bcred fr" jsonget="link" target="_blank" href="#"><i class="icon">🔗</i>Go to project</a></div>
