--- a/development/arts/index.html
+++ b/development/arts/index.html
@@ -24,7 +24,7 @@
             <h7 jsonget="summary"></h7>
             <small jsonget="designer" jsonbefore="Designed by: "></small>
             <small jsonget="adopted" jsonbefore="Adopted: "></small>
-            <a target="_blank" class="button mt2 bcred" href="{{ jsonget:image }}" download>Download</a>
+            <a target="_blank" class="button mt2 bcred" href="{{ jsonget:image }}" globalize="download" download>Download</a>
         </figure>
     </div>
 
