--- a/research/ethnology/linguistics/official_aramaic.html
+++ b/research/ethnology/linguistics/official_aramaic.html
@@ -1,7 +1,7 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Official Aramaic" template="../../../index;../index"></script>
 
 <section class="pauto">
-    <h1 globalize="old_aramaic">Official Aramaic</h1>
+    <h1 globalize="official_aramaic">Official Aramaic</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#" globalize="research">Research</a></li>
