--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -6,13 +6,13 @@
 
             <details open>
                 <summary globalize="overview">Overview</summary>
-                <a href="./research/ethnology">1. Summary</a>
+                <a href="./research/ethnology" globalize="summary">1. Summary</a>
                 <a href="./research/ethnology/language.html" globalize="language">2. Language</a>
                 <a href="./research/ethnology/religion.html" globalize="religion">3. Religion</a>
             </details>
 
             <details open>
-                <summary>Culture</summary>
+                <summary globalize="culture">Culture</summary>
                 <details>
                     <summary globalize="language">Language</summary>
                     <a href="./research/ethnology/linguistics/old_aramaic.html" globalize="old_aramaic">Old Aramaic</a>
