--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div id="menu" class="modal menu bcred br0">
             <nav class="topbar flc0 shade h4_5 gap2- bcblack01 sblack-">
-                <a href="#" class="button xl_du yellow- p0 shade1"><i class="icon32">&times;</i></a>
+                <a href="#" class="button xl_du yellow- p0 shade1"><i class="icon32">&#10060;</i></a>
                 <figure class="pl1 pr2"><img src="assets/img/logo_white.png"></figure>
             </nav>
             <section>
