--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="menu" class="modal menu bcred br0">
             <nav class="topbar flc0 shade h4_5 gap2- bcblack01 sblack-">
                 <a href="#" class="button xl_du yellow- p0 shade1"><i class="icon32">&#10060;</i></a>
-                <figure class="pl1 pr2"><img src="assets/img/logo_white.png"></figure>
+                <figure><img src="assets/img/logo_white.png"></figure>
             </nav>
             <section>
                 <nav class="sidebar pt2 pb2 w100 fs13 gaph2- red- bcred pointer afr">
