--- a/footer.html
+++ b/footer.html
@@ -4,6 +4,7 @@
         <option value="en">English</option>
         <option value="sv">Svenska</option>
         <option value="arc">ܐܪܡܝܐ</option>
+        <option value="he">עברית</option>
     </select>
     <hr class="mt1 bcred shade1">
     <a href="https://www.facebook.com/aramean.institute" target="_blank" alt="facebook"><i class="icon48 white">&#9429;</i></a>
