--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-4Z8JXR2XX0')</script>
 </head>
 <body class="bg">
-
     <header>
-        <form>
-            
-        </form>
+        <div id="navloader" class="navloader pa t0 w100 bcwhite02 d0"><div id="navprogress" class="bcwhite04"></div></div>
         <nav class="topbar dark shade05 h2_5 gap2- z08 xl_dn fwb" selective="true">
             <a class="fr bcred yellow p1" href="contribute/" key="2" globalize="contribute"><i class="icon">&#9829;</i>Contribute</a>
             <a class="pr2" href="contact/" key="3" globalize="contact">Contact</a>
