--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -19,7 +19,7 @@
         <br>
         <p>The error result went viral online for years and confused many Arameans when the body text translated into "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs".</p>
         <br>
-        <p>In the first edition, it is clear that the heading says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", meaning "Semitic people descendants of Shem", but no mentions about "Aram" being one of Shem's sons in the subheading, however reading further on page 11, it says: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye d-henun Suryoye, Ebroye, Forsoye", meaning "Children of Shem: Assyrians, Chaldeans, Lydians, Arameans that is Syriacs, Hebrews, and Persians."</p>
+        <p>In the first edition, it is clear that the heading says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", meaning "Semitic people descendants of Shem", but no mentions of "Aram" being one of Shem's sons in the subheading, however reading further on page 11, it says: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye d-henun Suryoye, Ebroye, Forsoye", meaning "Children of Shem: Assyrians, Chaldeans, Lydians, Arameans that is Syriacs, Hebrews, and Persians."</p>
         <br>
         <p>The error was corrected in 2006 in a new edition which was published with the correct interpretation, thanks to Dayroyo Isa Aygur, Mushe Görgun, Steffanos Budak, Iskender Demirel, Eliyo Seven beth Qemez, and Gabriel Yalgin.</p>
         <hr class="mt2 bcblack">
