--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -5,7 +5,7 @@
     <aside index="1"></aside>
 </template>
 
-<div class="alert banner shade1 br0 pauto bcred white-">
+<div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
     <h1 globalize="software_technology">Software Technology</h1>
     <nav class="crumbs pointer pt05">
         <ol>
