--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -11,13 +11,14 @@
 
 <section class="pauto">
     <article>
-        Not available!
+        <h2 globalize="population">Population</h2>
+        <p>Not available!</p>
     </article>
-
-    <h2>Linguistics</h2>
-    Traced Aramaic words in world languages
-    <ul>
-        <li>Etymology</li>
-    </ul>
-
+    <article class="mt2">
+        <h2 globalize="etymology">Etymology</h2>
+        <h5>Traced Aramaic words in world languages</h5>
+        <p>Not available!</p>
+    </article>
 </section>
+
+<section include="./footer.html" class="bcred white white- p1"></section>
