--- a/article/kaldu-arameans-in-babylon.html
+++ b/article/kaldu-arameans-in-babylon.html
@@ -24,7 +24,7 @@
         <br>
         <p>Nabopolassar (c. 614 BC) formed a powerful alliance with the Persians, Medes, Scythians, Cimmerians, Israelites, other tribes to overthrow the harsh Assyrian rulers and their long-lasting empire once in for all.</p>
         <br>
-        <p>In 612 BC, the Assyrian city of Nineveh was besieged and sacked by the alliance after a brutal battle. The fall of Nineveh led to the destruction of the Neo-Assyrian Empire and the Assyrian people over a few years.</p><br>
+        <p>In 612 BC, the Assyrian city of Nineveh was besieged and sacked by the alliance that King Nabopolassar formed. After a brutal battle, Nineveh fell and it led to the destruction of the Neo-Assyrian Empire and with it the Assyrian people over a few years.</p><br>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-12, Last update: 2021-02-01</small>
     </article>
