--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
             </article>
             <figure>
                 <img if="!{{ jsonget:thumbnail }};;src:assets/img/slide{{ jsonget:id }}.jpg">
+                <span class="bcblack04 pa hm100 w100"></span>
             </figure>
         </section>
         <div class="sr" skip><a onclick="alert('c')"><i class="icon64 bcblack02 d0">&#707;</i></a></div>
