--- a/contribute/index.html
+++ b/contribute/index.html
@@ -11,12 +11,12 @@
 
 <section class="pauto wc_xxl">
     <article>
-        <h4 class="fs16 mb1">Your contribution and support makes a difference!</h4>
-        <p>Consider supporting the valuable work that the Aramean Institute does by donating or sharing with others who want to help.</p>
+        <h4 class="fs16 mb1" globalize="page_contribute_text1"></h4>
+        <p globalize="page_contribute_text2"></p>
         <br>
         <form action="https://www.paypal.com/donate" method="post" target="_blank">
             <input type="hidden" name="hosted_button_id" value="BAQWBFGZ83FVC" />
-            <input type="submit" class="button bcred yellow" value="I want to donate">
+            <input type="submit" class="button bcred yellow" globalize="page_contribute_text3">
         </form>
 
     </article>
