--- a/contribute/index.html
+++ b/contribute/index.html
@@ -6,7 +6,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1 globalize="contribute">Contribute</h1>
+    <h1 globalize="contribute"></h1>
 </div>
 
 <section class="pauto wc_xxl">
