--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
 
-    <nav class="topbar bcwhite shade1 h4_5 gap2- sred-" selective="true">
+    <nav class="topbar bcwhite shade1 h4_5 md_fs0- gap2- sred-" selective="true">
         <a href="#menu" class="button xl_du red- p0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
