--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
 
 <article class="pauto wc_xxl">
     <section>
-        <h4 class="tac">For all inquiries, please email us using this form below.</h4>
+        <h4 class="tac" globalize="page_contact_text1">For all inquiries, please email us using the form below.</h4>
     </section>
     <section>
         <form class="gaph2- mt2">
