--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,10 @@
 <section class="wc_xxl db tac">
     <a class="pt2" href="about/" globalize="about">About</a> &middot; <a href="policy/privacy/" globalize="privacy">Privacy</a> &middot; <a href="policy/cookie/" globalize="cookie">Cookie</a>
     &nbsp;<select onchange="globalizeChangeLanguage((this.options[this.selectedIndex].value))">
-        <option value="en">English</option>
-        <option value="sv">Svenska</option>
+        <option value="eng">English</option>
+        <option value="swe">Svenska</option>
         <option value="arc">ܐܪܡܝܐ</option>
-        <option value="he">עברית</option>
+        <option value="heb">עברית</option>
     </select>
     <hr class="mt1 bcred shade1">
     <a href="https://www.facebook.com/aramean.institute" target="_blank" alt="facebook"><i class="icon48 white">&#9429;</i></a>
