--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -19,7 +19,7 @@
                     <a href="./research/ethnology/linguistics/official_aramaic.html" globalize="official_aramaic">Official Aramaic</a>
                     <a href="#" globalize="middle_aramaic">Middle Aramaic</a>
                     <a href="#" globalize="late_aramaic">Late Aramaic</a>
-                    <a href="#" globalize="modern_aramaic">Modern Aramaic</a>
+                    <a href="./research/ethnology/linguistics/modern_aramaic.html" globalize="modern_aramaic">Modern Aramaic</a>
                 </details>
                 <details>
                     <summary globalize="religion">Religion</summary>
