--- a/research/ethnology/linguistics/old_aramaic.html
+++ b/research/ethnology/linguistics/old_aramaic.html
@@ -12,9 +12,9 @@
     </nav>
 
     <article class="mt2">
-        <p>Old Aramaic (c. 850-1000 BC) refers to the most punctual phase of the Aramaic language, known from the bilingual inscription discovered 1979 in Tell Fekheriyah.</p>        
+        <p>Old Aramaic or Ancient Aramaic (c. 850-1000 BC) refers to the most punctual phase of the Aramaic language, known from the bilingual inscription discovered 1979 in Tell Fekheriyah.</p>        
         <hr class="mt2 bcblack">
-        <small class="gray">Published: 2021-01-13, Last update: 2021-01-13</small>
+        <small class="gray">Published: 2021-01-13, Last update: 2021-06-29</small>
     </article>
 
 </section>
