--- a/research/ethnology/linguistics/modern_aramaic.html
+++ b/research/ethnology/linguistics/modern_aramaic.html
@@ -1,13 +1,13 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Modern Aramaic" template="../../../index"></script>
 
 <section class="pauto">
-    <h1 globalize="old_aramaic">Modern Aramaic</h1>
+    <h1 globalize="modern_aramaic">Modern Aramaic</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#" globalize="research">Research</a></li>
             <li><a href="./research/ethnology" globalize="ethnology">Ethnology</a></li>
             <li><a href="#" globalize="linguistics">Linguistics</a></li>
-            <li globalize="old_aramaic">Modern Aramaic</li>
+            <li globalize="modern_aramaic">Modern Aramaic</li>
         </ol>
     </nav>
 
