--- a/research/ethnology/language.html
+++ b/research/ethnology/language.html
@@ -11,7 +11,7 @@
     </nav>
     
     <section class="mt2">
-        <p>Aramaic is a language or group of languages that belong to the Semitic language family. The language has gone through 5 development phases according to the analysis done by Joseph Augustine Fitzmyer and Aaron Butts: <a href="./research/ethnology/linguistics/old_aramaic.html">Old Aramaic</a>, <a href="./research/ethnology/linguistics/official_aramaic.html">Official Aramaic</a>, Middle Aramaic, Late Aramaic, and Modern Aramaic.</p>
+        <p>Aramaic is a language or group of languages that belong to the Semitic language family. The language has gone through 5 development phases according to the analysis done by Joseph Augustine Fitzmyer and Aaron Butts: <a href="./research/ethnology/linguistics/old_aramaic.html">Old Aramaic</a>, <a href="./research/ethnology/linguistics/official_aramaic.html">Official Aramaic</a>, Middle Aramaic, Late Aramaic, and <a href="./research/ethnology/linguistics/modern_aramaic.html">Modern Aramaic</a>.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2020-09-01, Last update: 2020-12-26</small>
     </section>
