--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -12,11 +12,12 @@
 <section class="pauto">
     <article>
         <h2 globalize="population">Population</h2>
+        <h5>Population in Diaspora:</h5>
         <p>Not available!</p>
     </article>
     <article class="mt2">
         <h2 globalize="etymology">Etymology</h2>
-        <h5>Traced Aramaic words in world languages</h5>
+        <h5>Traced Aramaic origin root words in world languages:</h5>
         <p>Not available!</p>
     </article>
 </section>
