--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -12,13 +12,13 @@
 <section class="pauto">
     <article>
         <h2 globalize="population">Population</h2>
-        <h5>Population in Diaspora:</h5>
-        <p>Not available!</p>
+        <h5>Registred population in Diaspora:</h5>
+        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mt1">Not available!</i></p>
     </article>
     <article class="mt2">
         <h2 globalize="etymology">Etymology</h2>
         <h5>Traced Aramaic origin root words in world languages:</h5>
-        <p>Not available!</p>
+        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mt1">Not available!</i></p>
     </article>
 </section>
 
