--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -12,7 +12,7 @@
 <section class="pauto">
     <article>
         <h2 globalize="population">Population</h2>
-        <h5>Registred population in Diaspora:</h5>
+        <h5>Registered persons in Diaspora:</h5>
         <p><i class="tag br2 bcblack01 p05 pr1 pl1 mt1">Not available!</i></p>
     </article>
     <article class="mt2">
