--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -12,13 +12,15 @@
 <section class="pauto">
     <article>
         <h2 globalize="population">Population</h2>
-        <h5>Registered persons in Diaspora:</h5>
-        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mt1">Not available!</i></p>
+        <h6>Registered persons alive in Diaspora:</h5>
+        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mb1 mt05">Soon available!</i></p>
+        <h6>Registered persons dead in Diaspora:</h5>
+        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mb1 mt05">Soon available!</i></p>
     </article>
-    <article class="mt2">
+    <article class="mt1">
         <h2 globalize="etymology">Etymology</h2>
-        <h5>Traced Aramaic origin root words in world languages:</h5>
-        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mt1">Not available!</i></p>
+        <h6>Traced Aramaic origin root words in world languages:</h5>
+        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mb1 mt05">Not available!</i></p>
     </article>
 </section>
 
