--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -10,12 +10,12 @@
 </div>
 
 <section class="pauto">
-    <article json="true" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/persons" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
+    <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/persons" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
         <h2 globalize="population">Population</h2>
         <h6>Registred living people in Diaspora:</h5>
-        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mb1 mt05" loader="true">Soon available!</i></p>
+        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mb1 mt05" loader="true" jsonget="alive"></i></p>
         <h6>Registred dead people in Diaspora:</h5>
-        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mb1 mt05" loader="true">Soon available!</i></p>
+        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mb1 mt05" loader="true" jsonget="dead"></i></p>
     </article>
     <article class="mt1">
         <h2 globalize="etymology">Etymology</h2>
