--- a/article/israel-recognizes-aramean-nationality.html
+++ b/article/israel-recognizes-aramean-nationality.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="The language of Tur Abdin" template="../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Israel recognizes the Arameans as separate nationality" template="../index"></script>
 
 <template>
     <aside index="0"></aside>
@@ -6,17 +6,16 @@
 </template>
 
 <section class="pauto">
-    <h1>The language of Tur Abdin</h1>
+    <h1>Israel recognizes the Arameans as separate nationality</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#" globalize="article">Article</a></li>
-            <li>The language of Tur Abdin</li>
+            <li>Israel recognizes the Arameans as separate nationality</li>
         </ol>
     </nav>
 
     <article class="mt2">
-        <p class="fwb">The Aramaic of Tur Abdin (Turabdium) is the Aramaic of Urhoy (Edessa). "Aramaya" became "Suryaya" and "Suryaya" became "Suryoyo".</p>
-        <br>
+        <p class="fwb">The State of Israel recognizes the Arameans as separate nationality in Israel.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-07-02, Last update: 2021-07-02</small>
     </article>
