--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -10,12 +10,15 @@
 </div>
 
 <section class="pauto">
+    <article class="mb2">
+        The statistics are based on the information on registered persons that the Aramean Center submits to the Aramean Institute.
+    </article>
     <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/persons" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
         <h2 globalize="population">Population</h2>
-        <h6>Registred living people in Diaspora:</h5>
-        <p><i class="tag br2 bcblack01 p05 fwb w10r tac pr1 pl1 mb1 mt05" loader="true" jsonget="alive"></i></p>
-        <h6>Registred dead people in Diaspora:</h5>
-        <p><i class="tag br2 bcblack01 p05 fwb w10r tac pr1 pl1 mb1 mt05" loader="true" jsonget="dead"></i></p>
+        <h7>Registred living people in Diaspora:</h7>
+        <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="alive"></i></p>
+        <h7>Registred dead people in Diaspora:</h7>
+        <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="dead"></i></p>
     </article>
     <article class="mt1">
         <h2 globalize="etymology">Etymology</h2>
