--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -11,7 +11,7 @@
 
 <section class="pauto">
     <article class="mb2">
-        The statistics are based on the information on registered persons that the Aramean Center submits to the Aramean Institute.
+        The statistics are based on the information that <a href="https://aramean.center" target="_blank">Aramean Center</a> shares with Aramean Institute.
     </article>
     <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/persons" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
         <h2 globalize="population">Population</h2>
