--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -11,19 +11,22 @@
 
 <section class="pauto">
     <article class="mb2">
-        The statistics are based on the information that <a href="https://aramean.center" target="_blank">Aramean Center</a> shares with Aramean Institute.
+        The statistics are live and based on the information that <a href="https://aramean.center" target="_blank">Aramean Center</a> shares with Aramean Institute.
     </article>
     <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/persons" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
-        <h2 globalize="population">Population</h2>
+        <h2 globalize="population" class="mb1">Population</h2>
         <h7>Registred living people in Diaspora:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="alive"></i></p>
         <h7>Registred dead people in Diaspora:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="dead"></i></p>
     </article>
-    <article class="mt1">
-        <h2 globalize="etymology">Etymology</h2>
-        <h6>Traced Aramaic origin root words in world languages:</h5>
-        <p><i class="tag br2 bcblack01 p05 pr1 pl1 mb1 mt05">Not available!</i></p>
+    <hr>
+    <article class="mt2" json="true;loader" iterate="false" datasource="https://fepmwokzjfhuyhyggktb.supabase.co/rest/v1/rpc/words" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMTc4OTE1OCwiZXhwIjoxOTM3MzY1MTU4fQ.AhcMTJs8FwpE-CL_TvxGyQuo8E4PUjHhQ_qOshlv6BU">
+        <h2 globalize="language" class="mb1">Language</h2>
+        <h7>Registred words in Aramaic (Surayt):</h7>
+        <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="surayt"></i></p>
+        <h7>Registred words in Aramaic (Sureth):</h7>
+        <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="sureth"></i></p>
     </article>
 </section>
 
