--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -23,10 +23,19 @@
     <hr>
     <article class="mt2" json="true;loader" iterate="false" datasource="https://fepmwokzjfhuyhyggktb.supabase.co/rest/v1/rpc/words" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMTc4OTE1OCwiZXhwIjoxOTM3MzY1MTU4fQ.AhcMTJs8FwpE-CL_TvxGyQuo8E4PUjHhQ_qOshlv6BU">
         <h2 globalize="language" class="mb1">Language</h2>
-        <h7>Registred words in Aramaic (Surayt):</h7>
+        <h7>Registred words in Modern Aramaic (Suryoyo):</h7>
+        <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="suryoyo"></i></p>
+        <h7>Registred words in Modern Aramaic (Surayt):</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="surayt"></i></p>
-        <h7>Registred words in Aramaic (Sureth):</h7>
+        <h7>Registred words in Modern Aramaic (Sureth):</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="sureth"></i></p>
+        <h7>Registred words in Modern Aramaic (Suryon):</h7>
+        <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true">0</i></p>
+        <hr>
+        <h7>Registred words in Late Aramaic (Suryaya):</h7>
+        <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="suryaya"></i></p>
+        <h7>Registred words in Late Aramaic (Aramaya):</h7>
+        <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true">0</i></p>
     </article>
 </section>
 
