--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -23,7 +23,7 @@
     <hr>
     <article class="mt2" json="true;loader" iterate="false" datasource="https://fepmwokzjfhuyhyggktb.supabase.co/rest/v1/rpc/words" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMTc4OTE1OCwiZXhwIjoxOTM3MzY1MTU4fQ.AhcMTJs8FwpE-CL_TvxGyQuo8E4PUjHhQ_qOshlv6BU">
         <h2 globalize="language" class="mb1">Language</h2>
-        <h5 class="mb1">Modern Aramaic</h5>
+        <b class="mb1">Modern Aramaic</b>
         <h7>Registred words in Suryoyo:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="suryoyo"></i></p>
         <h7>Registred words in Surayt:</h7>
@@ -33,7 +33,7 @@
         <h7>Registred words in Suryon:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true">0</i></p>
         <hr>
-        <h5 class="mb1">Late Aramaic</h5>
+        <b class="mb1">Late Aramaic</b>
         <h7>Registred words in Suryaya:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="suryaya"></i></p>
         <h7>Registred words in Aramaya:</h7>
