--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,10 @@
     <section>
         <form method="post" datasource="https://tmqmoxcasyhxxxqknevp.supabase.co/rest/v1/emails" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyNTM0NjM2MSwiZXhwIjoxOTQwOTIyMzYxfQ.3PDCNsUHb4gVwtRi_GTDA93sk3l9Usmd6YdA2OHxbY0" class="gaph2- mt2" ondone="alert('Your message was sent successfully.')">
                 <div class="group">
-                <input name="name" class="outlined" type="text" globalize="full_name" placeholder="Full name" required>
+                    <input name="name" class="outlined" type="text" globalize="full_name" placeholder="Full name" required>
+                </div>
+                <div class="group">
+                    <input name="email" class="outlined" type="text" globalize="email" placeholder="E-mail" required>
                 </div>
                 <div class="group">
                 <select name="subject" class="outlined">
