--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
                     <input name="name" class="outlined" type="text" globalize="full_name" placeholder="Full name" required>
                 </div>
                 <div class="group">
-                    <input name="email" class="outlined" type="text" globalize="email" placeholder="E-mail" required>
+                    <input name="email" class="outlined" type="text" globalize="email" placeholder="Email" required>
                 </div>
                 <div class="group">
                 <select name="subject" class="outlined">
