--- a/contact/index.html
+++ b/contact/index.html
@@ -23,9 +23,9 @@
                 </div>
                 <div class="group">
                 <select name="subject" class="outlined">
-                    <option value="1">Membership</option>
-                    <option value="2">Cooperation</option>
-                    <option value="0" selected>Other</option>
+                    <option value="1" globalize="membership">Membership</option>
+                    <option value="2" globalize="cooperation">Cooperation</option>
+                    <option value="0" globalize="other" selected>Other</option>
                 </select>
                 </div>
 
