--- a/contact/index.html
+++ b/contact/index.html
@@ -1,5 +1,5 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Contact Us" template="../index"></script>
-    
+
 <template>
     <aside index="0"></aside>
     <aside index="1"></aside>
@@ -16,13 +16,13 @@
     <section>
         <form method="post" datasource="https://tmqmoxcasyhxxxqknevp.supabase.co/rest/v1/emails" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyNTM0NjM2MSwiZXhwIjoxOTQwOTIyMzYxfQ.3PDCNsUHb4gVwtRi_GTDA93sk3l9Usmd6YdA2OHxbY0" class="gaph2- mt2" ondone="alert('Your message was sent successfully.')">
                 <div class="group">
-                    <input name="name" class="outlined" type="text" globalize="full_name" placeholder="Full name" required>
+                    <input name="name" class="outlined phdark" type="text" globalize="full_name" placeholder="Full name" required>
                 </div>
                 <div class="group">
-                    <input name="email" class="outlined" type="text" globalize="email" placeholder="Email" required>
+                    <input name="email" class="outlined phdark" type="text" globalize="email" placeholder="Email" required>
                 </div>
                 <div class="group">
-                <select name="subject" class="outlined">
+                <select name="subject" class="outlined phdark">
                     <option value="1" globalize="membership">Membership</option>
                     <option value="2" globalize="cooperation">Cooperation</option>
                     <option value="0" globalize="other" selected>Other</option>
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="group" required>
-                    <textarea name="message" class="w100 h10r outlined" globalize="message" placeholder="Message"></textarea>
+                    <textarea name="message" class="w100 h10r outlined phdark" globalize="message" placeholder="Message"></textarea>
                 </div>
 
                 <div class="gap1-">
