--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -39,6 +39,15 @@
         <h7>Registred words in Aramaya:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true">0</i></p>
     </article>
+    <hr>
+    <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/buildings" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
+        <h2 globalize="properties" class="mb1">Properties</h2>
+        <b class="mb1">Buildings</b>
+        <h7>Registred churches in Diaspora:</h7>
+        <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="churches"></i></p>
+        <h7>Registred schools in Diaspora:</h7>
+        <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="schools"></i></p>
+    </article>
 </section>
 
 <section include="./footer.html" class="bcred white white- p1"></section>
