--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -13,6 +13,7 @@
     <article class="mb2">
         The statistics are live and based on the information that <a href="https://aramean.center" target="_blank">Aramean Center</a> shares with Aramean Institute.
     </article>
+    <hr class="bos8 red mt2 mb2">
     <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/persons" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
         <h2 globalize="population" class="mb1">Population</h2>
         <h7>Registred living people in Diaspora:</h7>
@@ -20,8 +21,8 @@
         <h7>Registred dead people in Diaspora:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="dead"></i></p>
     </article>
-    <hr>
-    <article class="mt2" json="true;loader" iterate="false" datasource="https://fepmwokzjfhuyhyggktb.supabase.co/rest/v1/rpc/words" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMTc4OTE1OCwiZXhwIjoxOTM3MzY1MTU4fQ.AhcMTJs8FwpE-CL_TvxGyQuo8E4PUjHhQ_qOshlv6BU">
+    <hr class="bos8 red mt2 mb2">
+    <article json="true;loader" iterate="false" datasource="https://fepmwokzjfhuyhyggktb.supabase.co/rest/v1/rpc/words" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMTc4OTE1OCwiZXhwIjoxOTM3MzY1MTU4fQ.AhcMTJs8FwpE-CL_TvxGyQuo8E4PUjHhQ_qOshlv6BU">
         <h2 globalize="language" class="mb1">Language</h2>
         <b class="mb1">Modern Aramaic</b>
         <h7>Registred words in Suryoyo:</h7>
@@ -39,7 +40,7 @@
         <h7>Registred words in Aramaya:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true">0</i></p>
     </article>
-    <hr>
+    <hr class="bos8 red mt2 mb2">
     <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/buildings" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
         <h2 globalize="properties" class="mb1">Properties</h2>
         <b class="mb1">Buildings</b>
@@ -48,6 +49,7 @@
         <h7>Registred schools in Diaspora:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="schools"></i></p>
     </article>
+    <hr class="bos8 red mt2 mb2">
 </section>
 
 <section include="./footer.html" class="bcred white white- p1"></section>
