--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <nav class="topbar bcwhite shade1 h4_5 lg_fs0- gap2- sred-" selective="true">
         <a href="#menu" class="button xl_du red- p0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
-        <a href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
-        <a href="collection/statistics" key="1" globalize="statistics">Statistics</a>
-        <a href="development/technology" key="3" globalize="technology">Technology</a>
-        <a href="development/arts" key="3" globalize="arts">Arts</a>
+        <a class="xl_dn" href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
+        <a class="xl_dn" href="collection/statistics" key="1" globalize="statistics">Statistics</a>
+        <a class="xl_dn" href="development/technology" key="3" globalize="technology">Technology</a>
+        <a class="xl_dn" href="development/arts" key="3" globalize="arts">Arts</a>
 
         <div id="menu" class="modal menu bcred br0">
             <nav class="topbar flc0 shade h4_5 gap2- bcblack01 sblack-">
