--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -10,7 +10,7 @@
 </div>
 
 <section class="pauto">
-    <article class="mb2">
+    <article class="mb2" globalize="page_statistcs_text1">
         The statistics are live and based on the information that <a href="https://aramean.center" target="_blank">Aramean Center</a> shares with Aramean Institute.
     </article>
     <hr class="bos8 red mt2 mb2">
