--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -18,7 +18,7 @@
 
 <section class="pauto">
     <article class="mb2">
-        More action and less talk. We produce important software technology that impacts the society.
+        An important part of the Aramean Institute's mission is developing software that benefits Arameans and society alike.
     </article>
 
     <div json="true" iterate="projects" datasource="../../../assets/json/projects.json" class="box cards list gut3- br05- border- tac p2-">
