--- a/article/aramean-genocide-sayfo-seyfo.html
+++ b/article/aramean-genocide-sayfo-seyfo.html
@@ -17,6 +17,7 @@
     <article class="mt2">
         <p class="fwb">Turks and Kurds kills over 500 thousand Arameans between 1915 and 1917.</p>
         <br>
+        <p>In the midst of the First World War, Turks and Kurds killed over 500 thousand Arameans during the Ottoman conquest in the northern part of Aram.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-07-03, Last update: 2021-07-03</small>
     </article>
