--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -15,9 +15,9 @@
     </nav>
 
     <article class="mt2">
-        <p>When Theologian Jean Baptist Chabot released the first edition of his interpretation of The Chronicle of Michael the Great, he failed to add a comma and left out "Oromoye", meaning "Arameans" in the sentence.</p>
+        <p>Theologian Jean Baptist Chabot's first edition of his interpretation of the Chronicle of Michael the Great lacked a comma and left out "Oromoye", meaning "Arameans" in the sentence.</p>
         <br>
-        <p>The error result went viral online for years and confused many Arameans when the body text translated into "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs".</p>
+        <p>The error result went viral online for years and confused many Arameans when the body text stated "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs".</p>
         <br>
         <p>In the first edition, it is clear that the heading says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", meaning "Semitic people descendants of Shem", but no mentions of "Aram" being one of Shem's sons in the subheading, however reading further on page 11, it says: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye d-henun Suryoye, Ebroye, Forsoye", meaning "Children of Shem: Assyrians, Chaldeans, Lydians, Arameans that is Syriacs, Hebrews, and Persians."</p>
         <br>
