--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="" />
     <meta property="og:title" content="Aramean Institute" />
     <meta property="og:description" content="The Aramean Institute is a worldwide multi-institute." />
-    <meta property="og:image" content="assets/img/logo.png" />
+    <meta property="og:image" content="/assets/img/logo.png" />
     <base env="local:/;prod:/">
     <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
     <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
