--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="eng" cache="no">
 <head>
     <title>Aramean Institute</title>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge;ie=10;chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge;ie=10;chrome=1"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:url" content="https://aramean.insitute" />
-    <meta property="og:type" content="" />
-    <meta property="og:title" content="Aramean Institute" />
-    <meta property="og:description" content="The Aramean Institute is a worldwide multi-institute." />
-    <meta property="og:image" content="/assets/img/logo.png" />
+    <meta property="og:url" content="https://www.aramean.institute"/>
+    <meta property="og:type" content=""/>
+    <meta property="og:title" content="Aramean Institute"/>
+    <meta property="og:description" content="The Aramean Institute is a worldwide multi-institute."/>
+    <meta property="og:image" content="https://www.aramean.institute/assets/img/logo.png"/>
     <base env="local:/;prod:/">
     <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
     <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
