--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:url" content="https://www.aramean.institute"/>
-    <meta property="og:type" content=""/>
+    <meta property="og:type" content="website"/>
     <meta property="og:title" content="Aramean Institute"/>
     <meta property="og:description" content="The Aramean Institute is a worldwide multi-institute."/>
     <meta property="og:image" content="https://www.aramean.institute/assets/img/logo.png"/>
